tests/parser/good/startstmt.gbl
scene main
{
	start battle;
}

scene battle
{
}
