tests/parser/errors/enters_no_semicolon.gbl
scene main
{
	toto enters another_scene
}
